# oxiclean

./: .SRCINFO  CHANGELOG.md  Cargo.toml  LICENSE  PKGBUILD  README.md  _write_clean.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: clean.rs  detect.rs  main.rs  utils.rs
tests/: cli_test.rs
